# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: action-check.yml
gendiff/: cli.py  gendiff_base.py
gendiff/script/: gendiff.py
tests/: test_gendiff.py
