[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["ArtShai <rinatha93@mail.ru>"]
packages = [  {include = "gendiff" }, ]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.script.gendiff:main"